--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container-all">
                  
 
-        <h1 class="main-title"><b>ALFABETO ARMENIO /</b> Հայկական այբուբեն</h1>
+        <h1 class="main-title">Entender el <b>ALFABETO ARMENIO</b> / Հայկական այբուբեն</h1>
 
     
 
