--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
              <h4 class="Title">Բ / բ</h4>
 
-             <p>es la letra <b>P / p</b><br> y sola se pronuncia "pén"</p>
+             <p>es la letra <b>P / p</b> y sola se pronuncia "pén"</p>
 
              <div class="background-hover">
 
