--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
               <div class="background-hover">
 
-                <img class="motivo1" src="imagenes/A.jpg">  
+                <img class="motivo1" src="imagenes/B.jpg">  
                  
              </div>
              
