--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   
 
-    <div class="aprendamos"><h2 class="letras12">Apredamos las letras armenias</h2>
+    <div class="aprendamos"><h2 class="letras12">Las letras armenias</h2>
     <a href="index1.html"><div class="click" > <p class="click12"> click</p></div></div></a>
 
     <div class="burbujas">
