--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="burbujas">
 
         <div class="burbuja" id="aaa">Պ</div>
-        <div class="burbuja" id="bbb">խ</div>
+        <div class="burbuja" id="bbb">ձ</div>
         <div class="burbuja" id="ccc">ն</div>
         <div class="burbuja" id="ddd">չ</div>
         <div class="burbuja" id="eee">գ</div>
