--- a/index1.html
+++ b/index1.html
@@ -34,11 +34,11 @@
       
 
 
-         <div class="box box1">
+         <a href="index2.html"  style="text-decoration:none" ><div class="box box1">
 
              <i class="fas fa-ellipsis-h icon"></i>
 
-             <h4 class="Title">Ա / ա</h4><br>
+               <h4 class="Title" style="color:#000">Ա / ա</h4></a> <br>
 
              <p>es la letra <b>A / a</b><br> y sola se pronuncia "áip" </p>
            
