--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
 
     <div class="box145" >
         
-  <div class="apoya">apoyá el mouse o el dedo en las letras armenias</div>
+  <div class="apoya">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp apoyate sobre las letras armenias</div>
 
        <ul>   
 
@@ -43,7 +43,7 @@
     <h4 class="ararat">Ararat</h4>
 
     <a  style="text-decoration: none" href="index1.html" ><div class="click2"  >
-        <p class="click123"> click al abecedario</p></div></div></a>
+        <p class="click123"><b> Volver</b></p></div></div></a>
 
 
     </div>
