--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
 
     <div class="aprendamos"><h2 class="letras12">Las letras armenias</h2>
-    <a href="index1.html"><div class="click" > <p class="click12"> click</p></div></div></a>
+    <a href="index1.html"><div class="click" > <p class="click12"> Entrar</p></div></div></a>
 
     <div class="burbujas">
 
