--- a/index1.html
+++ b/index1.html
@@ -56,7 +56,7 @@
           
 
 
-
+         <a href="index3.html"  style="text-decoration:none" >
         <div class="box box2">
 
  
@@ -64,7 +64,7 @@
          <i class="fas fa-ellipsis-h icon"></i>
              
 
-          <h4 class="Title">Բ / բ</h4><br>
+          <h4 class="Title" style="color:#000">Բ / բ</h4></a><br>
 
           <p>es la letra <b>P / p</b> y sola se pronuncia "pén"</p>
 
