--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
         
   <div class="apoya">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp apoyate sobre las letras armenias</div>
 
-       <ul>   
+       <ul class="araratmasis">   
 
        
      <li class="rotacion">Ա </li>
