--- a/index3.html
+++ b/index3.html
@@ -23,7 +23,7 @@
         
   <div class="apoya">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp apoyate sobre las letras armenias</div>
 
-       <ul>   
+       <ul class="parevtzedz">   
 
        
      <li class="rotacion">բ </li>
