--- a/index1.html
+++ b/index1.html
@@ -40,7 +40,7 @@
 
                <h4 class="Title" style="color:#000">Ա / ա</h4> <br>
 
-             <p>es la letra <b>A / a</b><br> y sola se pronuncia "áip"<br>
+             <p>es la letra <b>A / a</b><br> y se pronuncia "áip"<br>
               <a  href="index2.html" style="color:#4b2303">ejemplo</a>  </p>
            
              
@@ -67,7 +67,7 @@
 
           <h4 class="Title">Բ / բ</h4><br>
 
-          <p>es la letra <b>P / p</b> y sola se pronuncia "pén" <br>
+          <p>es la letra <b>P / p</b> y se pronuncia "pén" <br>
             <a  href="index3.html" style="color:#00053c">ejemplo</a></p>
 
         <div class="background-hover">
@@ -90,7 +90,7 @@
 
          <h4 class="Title">Գ / գ</h4><br>
 
-         <p>es la letra <b>P / p</b><br> y sola se pronuncia "kím"  <br>
+         <p>es la letra <b>k / K</b><br> y se pronuncia "kím"  <br>
           <a  href="index4.html" style="color:#00053c">ejemplo</a></p>
 
          <div class="background-hover">
