--- a/index1.html
+++ b/index1.html
@@ -114,7 +114,8 @@
 
          <h4 class="Title">Դ / դ</h4><br>
 
-         <p>es la letra <b>T / t</b><br> y sola se pronuncia "tá"</p>
+         <p>es la letra <b>T / t</b><br> y se pronuncia "tá"<br>
+          <a  href="index5.html" style="color:#00053c">ejemplo</a></p>
 
           <div class="background-hover">
 
