--- a/index1.html
+++ b/index1.html
@@ -139,7 +139,8 @@
 
         <h4 class="Title">Ե / ե</h4><br>
 
-        <p>es la letra <b>IE / ie</b><br> y sola se pronuncia "iéch" </p>
+        <p>es la letra <b>IE / ie</b><br> y se pronuncia "iéch"<br>
+          <a  href="index6.html" style="color:#b46363">ejemplo</a></p> </p>
 
          <div class="background-hover">
 
@@ -160,7 +161,8 @@
 
          <h4 class="Title">Զ / զ</h4><br>
 
-          <p>es la letra <b> Z / z</b><br> y sola se pronuncia "zá" </p>
+          <p>es la letra <b> Z / z</b><br> y sola se pronuncia "zá"<br>
+            <a  href="index7.html" style="color:#123838">ejemplo</a> </p>
 
           <div class="background-hover">
 
